# dots-cpp

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHOR  CMakeLists.txt  LICENSE  README.md
dots-cg-cpp/: CMakeLists.txt
dots-cg-cpp/src/: DOTS-CG-CPP.cmake  config_cpp.py  enum.dots.h.dotsT  struct.dots.h.dotsT
dots-cpp/: CMakeLists.txt
dots-cpp/cmake/: DOTSConfig.cmake  FindPicoSHA2.cmake  FindRapidjson.cmake
dots-cpp/doc/: compile.txt  dcg.txt
dots-cpp/dots/: Application.h  CMakeLists.txt
dots-cpp/dots-cg-cpp/: CMakeLists.txt
dots-cpp/dots/io/: ContainerPool.cpp  Timer.cpp  Transceiver.h  Transmission.h
dots-cpp/dots/tests/: TestContainer.cpp  TestDynamicStruct.cpp
dots-cpp/dots/tools/: IpNetwork.h
dots-cpp/dots/type/: PosixTime.h  PropertyPairIterator.cpp  PropertyPairIterator.h  PropertyPath.cpp  Vector.h
dots-cpp/lib/: CMakeLists.txt
dots-cpp/lib/dots/: CMakeLists.txt
dots-cpp/tests/: CMakeLists.txt
dots-cpp/tests/src/: TestStaticDescriptor.cpp
lib/: CMakeLists.txt
lib/dots/: Application.cpp  Application.h  CMakeLists.txt  Uuid.cpp  Uuid.h  dots.cpp  dots.h
lib/dots-cg-cpp/: CMakeLists.txt
lib/dots-cg-cpp/src/: DOTS-CG-CPP.cmake  config_cpp.py  enum.dots.cpp.dotsT  enum.dots.h.dotsT  struct.dots.h.dotsT
lib/dots/common/: CTime.h  Chrono.cpp  Chrono.h  LibcTime.h  PosixTime.h  flf.cpp  flf.h
lib/dots/eventloop/: AsioEventLoop.cpp  AsioEventLoop.h  AsioFdHandler.h  AsioTimer.cpp  AsioTimer.h  Io.cpp  Io.h  IoService.cpp  IoService.h  Timer.cpp  Timer.h
lib/dots/functional/: fun.h
lib/dots/io/: AnyContainer.cpp  AnyContainer.h  Application.cpp  Application.h  Chained.cpp  Chained.h  Channel.cpp  Channel.h  ChannelConnection.cpp  ChannelConnection.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConstBufSeq.cpp  ConstBufSeq.h  Container.cpp  Container.h  ContainerNew.cpp  ContainerNew.h  ContainerPool.cpp  ContainerPool.h  ContainerPoolNew.cpp  ContainerPoolNew.h  DescriptorConverter.cpp  DescriptorConverter.h  Dispatcher.cpp  Dispatcher.h  DispatcherNew.cpp  DispatcherNew.h  DistributedTypeId.cpp  DistributedTypeId.h  DotsAsioSocket.cpp  DotsAsioSocket.h  DotsSocket.cpp  DotsSocket.h  DynamicTypeReceiver.cpp  DynamicTypeReceiver.h  Event.cpp  Event.h  Filter.cpp  (+46 more)
lib/dots/model/: CMakeLists.txt  descriptors.dots  dotsmessages.dots  dotsmodel_extra.dots
lib/dots/tests/: CMakeLists.txt  MockPublisher.h  TestAnyContainer.cpp  TestAsciiSerialization.cpp  TestCborSerialization.cpp  TestChrono.cpp  TestChronoDescriptor.cpp  TestContainer.cpp  TestContainerNew.cpp  TestDispatcher.cpp  TestDispatcherNew.cpp  TestDistributedTypeId.cpp  TestDynamicStruct.cpp  TestEnumDescriptor.cpp  TestFileReader.cpp  TestIpNetwork.cpp  TestJsonSerialization.cpp  TestNewEnumDescriptor.cpp  TestNewProperty.cpp  TestNewPropertySet.cpp  TestNewProxyProperty.cpp  TestNewProxyPropertyIterator.cpp  TestNewStaticDescriptor.cpp  TestNewStaticStruct.cpp  TestProperty.cpp  TestPropertyIterator.cpp  TestPropertyProxy.cpp  TestPropertyProxyVoid.cpp  TestPropertySet.cpp  TestProxyProperty.cpp  TestProxyPropertyIterator.cpp  TestRegistry.cpp  TestRttrVariantTypes.cpp  TestStaticDescriptor.cpp  TestStaticStruct.cpp  TestStruct.cpp  TestTProperty.cpp  TestTStruct.cpp  TestVectorDescriptor.cpp
lib/dots/tools/: Chained.h  IpNetwork.cpp  shared_ptr_only.h
lib/dots/type/: AnyStruct.cpp  AnyStruct.h  Chrono.cpp  Chrono.h  ChronoDescriptor.cpp  ChronoDescriptor.h  Descriptor.cpp  Descriptor.h  DynamicStruct.cpp  DynamicStruct.h  Enum.cpp  Enum.h  EnumDescriptor.cpp  EnumDescriptor.h  FundamentalTypes.h  LibcTime.h  NewDescriptor.cpp  NewDescriptor.h  NewEnumDescriptor.cpp  NewEnumDescriptor.h  NewFundamentalTypes.h  NewProperty.h  NewPropertyArea.h  NewPropertyContainer.h  NewPropertyDescriptor.cpp  NewPropertyDescriptor.h  NewPropertySet.h  NewProxyProperty.h  NewProxyPropertyIterator.cpp  NewProxyPropertyIterator.h  NewProxyPropertyPairIterator.cpp  NewProxyPropertyPairIterator.h  NewStaticDescriptor.h  NewStaticProperty.h  NewStaticStruct.h  NewStruct.cpp  NewStruct.h  NewStructDescriptor.cpp  NewStructDescriptor.h  NewTypeless.h  (+49 more)
lib/dots_model_extra/: CMakeLists.txt
lib/include/dots/: Application.h  Connection.h  Container.h  ContainerPool.h  Dispatcher.h  Event.h  GuestTransceiver.h  HostTransceiver.h  Registry.h  Requirements.h  Subscription.h  Timer.h  Transceiver.h  asio.h  asio_forward.h  dots.h
lib/src/: Application.cpp  Connection.cpp  Container.cpp  ContainerPool.cpp  Dispatcher.cpp  Event.cpp  GuestTransceiver.cpp  HostTransceiver.cpp  Registry.cpp  Requirements.cpp  Subscription.cpp  Timer.cpp  Transceiver.cpp  dots.cpp
lib/src/io/: Channel.cpp  Connection.cpp  Container.cpp  ContainerPool.cpp  DescriptorConverter.cpp  Dispatcher.cpp  Endpoint.cpp  Event.cpp  FdObserver.cpp  GuestTransceiver.cpp  HostTransceiver.cpp  Io.cpp  Listener.cpp  Registry.cpp  Subscription.cpp  Timer.cpp  Transceiver.cpp  Transmission.cpp
lib/src/model/: authentication.dots  daemon.dots  dotstesttypes.dots  legacy.dots
lib/src/serialization/: AsciiSerialization.cpp  SerializerException.cpp
lib/src/tools/: IpNetwork.cpp  Uri.cpp  logging.cpp
lib/src/type/: AnyStruct.cpp  Chrono.cpp  Descriptor.cpp  DescriptorMap.cpp  DynamicEnum.cpp  DynamicStruct.cpp  EnumDescriptor.cpp  PropertyDescriptor.cpp  Registry.cpp  StaticDescriptor.cpp  Struct.cpp  StructDescriptor.cpp  (+3 more)
model/: CMakeLists.txt  config_cpp.py  config_csharp.py
model/template/: enum.dots.cpp.dotsT  enum.dots.cs.dotsT  enum.dots.h.dotsT  struct.dots.cpp.dotsT  struct.dots.cs.dotsT  struct.dots.h.dotsT  struct2.dots2.cpp.dotsT
tests/: CMakeLists.txt
tests/src/: TestAsciiSerialization.cpp  TestCborSerialization.cpp  TestChrono.cpp  TestConnection.cpp  TestContainer.cpp  TestDigest.cpp  TestDispatcher.cpp  TestDynamicStruct.cpp  TestEnumDescriptor.cpp  TestGuestTransceiver.cpp  TestHostTransceiver.cpp  TestLegacyAuthManager.cpp  TestProperty.cpp  TestPropertyIterator.cpp  TestPropertySet.cpp  TestProxyProperty.cpp  TestStaticDescriptor.cpp  TestStaticStruct.cpp  TestStaticStructExperimental.cpp
(+331 files in other folders)
