        
install(FILES
        config_cpp.py 
        config_csharp.py
        template/enum.dots.cpp.dotsT
        template/enum.dots.cs.dotsT
        template/enum.dots.h.dotsT
        template/struct2.dots2.cpp.dotsT
        template/struct.dots.cpp.dotsT
        template/struct.dots.cs.dotsT
        template/struct.dots.h.dotsT
    DESTINATION share/dots
)
